--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "Insane Music Bot",
+    "name": "MAHL Music Bot",
     "description": "Insane Is A Telegram Telegram Group Calls streaming bot with some useful features, written in Python with Pyrogram and Py-Tgcalls.",
     "logo": "https://telegra.ph/file/e5938d9ca8fb7c2724f80.jpg",
     "keywords": [
