--- a/sample.env
+++ b/sample.env
@@ -1,7 +1,7 @@
-API_ID=123456 # get this value from my.telegram.org
-API_HASH=1abcd2efhs93u39 # get this value from my.telegram.org
-BOT_TOKEN=1263725637:cjkgdjjg # get this value from @Botfather
+API_ID=27938387 # get this value from my.telegram.org
+API_HASH=3b71825af0352f310bd4b6dae27523b9 # get this value from my.telegram.org
+BOT_TOKEN=6520378087:cjkgdjjg # get this value from @Botfather
 MONGO_DB_URI=Mongodb Uri # get this value from mongodb.com
-LOG_GROUP_ID=-1001234567890 # get this value from in your log group 
+LOG_GROUP_ID=-1002118978830 # get this value from in your log group 
 MUSIC_BOT_NAME=Insane # your music bot name 
 STRING_SESSION=pyrogram_string_session
